@@ -18,6 +18,7 @@ Change Log:
 - Fixed: Mailchimp list for deactivated users with drop down memberships
 - Fixed: Membership Script and Style conflict on other admin pages
 - Fixed: URL Protection Addon on https
+- Fixed: Invoices with no gateways no longer checked by cron and not automatically marked PAID
 
 1.0.3.5
 ----------------------------------------------------------------------
